# tt

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
src/: CMakeLists.txt  calculator.h  producer_consumer_pattern.h  quadratic_equation.h  square_solver.cpp
tests/: CMakeLists.txt  producer_consumer_pattern_test.cpp  quadratic_equation_test.cpp
